update deps and post photo to specified album

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "*",
     "everyauth": "*",
     "mongoose": "*",
-    "fbgraph": "~0.2.7"
+    "fbgraph": "~0.2.7",
+    "dirty": "~0.9.7"
   }
 }
